import {
  DataTypes,
  sql,
  type CreationOptional,
  type InferAttributes,
  type InferCreationAttributes,
  type NonAttribute,
} from "@sequelize/core"
import {
  Attribute,
  AutoIncrement,
  Default,
  HasMany,
  NotNull,
  PrimaryKey,
  Unique,
  ValidateAttribute,
} from "@sequelize/core/decorators-legacy"
import { isEmpty, isNil } from "lodash"

import BaseModel from "@/models/base-model"
import FundingReconciliation from "@/models/funding-reconciliation"

// TODO: standardize to snake_case
export enum UserStatus {
  ACTIVE = "Active",
  INACTIVE = "Inactive",
}

// TODO: standardize to snake_case
export enum UserRoles {
  ADMIN = "Admin",
  EDITOR = "Editor",
  USER = "User",
  SUPER_ADMIN = "Super Admin",
  SYSTEM_ADMINISTRATOR = "System Administrator",
}

export const USER_ROLES = Object.values<string>(UserRoles)

export class User extends BaseModel<InferAttributes<User>, InferCreationAttributes<User>> {
  static readonly Status = UserStatus
  static readonly Roles = UserRoles

  @Attribute(DataTypes.INTEGER)
  @PrimaryKey
  @AutoIncrement
  declare id: CreationOptional<number>

  @Attribute(DataTypes.STRING(200))
  @NotNull
  @Unique
  declare email: string

  @Attribute(DataTypes.STRING(200))
  @NotNull
  declare sub: string

  @Attribute(DataTypes.STRING(100))
  @NotNull
  declare firstName: string

  @Attribute(DataTypes.STRING(100))
  @NotNull
  declare lastName: string

  @Attribute(DataTypes.STRING(50))
  @NotNull
  @ValidateAttribute({
    isIn: {
      args: [Object.values(UserStatus)],
      msg: `Status must be one of: ${Object.values(UserStatus).join(", ")}`,
    },
  })
  declare status: UserStatus

  @Attribute({
    type: DataTypes.STRING(255),
    allowNull: false,
    defaultValue: UserRoles.USER,
    get() {
      const roles = this.getDataValue("roles")
      if (isEmpty(roles)) return []

      return roles.split(",")
    },
    set(value: string[]) {
      this.setDataValue("roles", value.join(","))
    },
    validate: {
      isValidRole(roles: string) {
        if (isNil(roles) || isEmpty(roles)) return

        const rolesArray = roles.split(",")
        rolesArray.forEach((role: string) => {
          if (USER_ROLES.includes(role)) return

          throw new Error(`Invalid role: ${role}. Allowed roles are: ${USER_ROLES.join(", ")}`)
        })
      },
    },
  })
  declare roles: CreationOptional<string[]>

  @Attribute(DataTypes.STRING(50))
  declare ynetId: string | null

  @Attribute(DataTypes.STRING(50))
  declare directoryId: string | null

  @Attribute(DataTypes.DATE)
  @NotNull
  @Default(sql.fn("getutcdate"))
  declare createdAt: CreationOptional<Date>

  @Attribute(DataTypes.DATE)
  @NotNull
  @Default(sql.fn("getutcdate"))
  declare updatedAt: CreationOptional<Date>

  @Attribute(DataTypes.DATE)
  declare deletedAt: Date | null

  // Magic Attributes
  get displayName(): NonAttribute<string> {
    return [this.firstName, this.lastName].filter(Boolean).join(" ")
  }

  get isSystemAdmin(): NonAttribute<boolean> {
    return this.roles.includes(UserRoles.SYSTEM_ADMINISTRATOR)
  }

  @HasMany(() => FundingReconciliation, {
    foreignKey: "finalizedById",
    inverse: {
      as: "finalizedBy",
    },
  })
  declare finalizedReconciliations?: NonAttribute<FundingReconciliation[]>

  static establishScopes() {
    this.addSearchScope(["firstName", "lastName", "email"])
  }
}

export default User
